--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
+
+    // emoji
+    implementation "com.android.support:support-emoji:28.0.0"
 }
