--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
 
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
     // emoji
     implementation "com.android.support:support-emoji:28.0.0"
 }
