--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     // add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
-
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
+
+    // recycler view dependency
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
