--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.1.0'
+
+//    // Corountine
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 }
