--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
 
     // emoji
     implementation "com.android.support:support-emoji:28.0.0"
+    implementation 'com.google.android.material:material:1.1.0'
 }
